// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` direct a test   can increase number :  info pushed by Server  1`] = `
<div
  className="flex1 column"
>
  <div
    className="flex center marginTopBottom"
  >
    <div
      className="titleBox"
    >
      pn1
    </div>
  </div>
  <div
    className="flex center"
  >
    <div
      className="currentBox shotEditorInfoBox"
    >
      Shot
      <br />
      <span
        className="shotNumber"
      >
        2
      </span>
      <br />
      <span>
        
      </span>
      <br />
      cv5ORQke7w6T4WTKKwBrA436dhyMSeFE
    </div>
  </div>
  <div
    className="flex center marginTopBottom"
  >
    <div
      className="Button"
    >
      {
  "text": "Prev",
  "className": "hugeButton",
  "iconFa": "step-backward",
  "preventTextChange": true
}
    </div>
    <div
      style={
        Object {
          "width": "1.5rem",
        }
      }
    />
    <div
      className="Button"
    >
      {
  "text": "Next",
  "className": "hugeButton",
  "iconFa": "step-forward",
  "fill": true,
  "preventTextChange": true
}
    </div>
  </div>
  <div
    className="flex column center"
  >
    <div
      className="List"
    >
      {}
      <ul>
        <div
          className="ListInput"
        >
          {
  "type": "number",
  "value": 2,
  "label": "Jump to shot",
  "clearButton": true
}
        </div>
      </ul>
    </div>
    <div
      className="Button"
    >
      {
  "style": {
    "marginTop": "-2rem"
  },
  "text": "Jump to shot",
  "iconFa": "fast-forward",
  "preventTextChange": true
}
    </div>
  </div>
  <div
    className="BlockTitle"
  >
    {
  "className": "centerText"
}
    <span
      text="director.cameras"
    >
      Automatically controlled cameras
    </span>
  </div>
  <div
    className="flex row center"
  />
</div>
`;

exports[` direct a test   can increase number :  project Edited by client 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": Object {
    "edit": "b19999999999999999999999",
  },
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getState": Object {
    "cameras": Object {},
    "projects": Object {
      "b19999999999999999999999": Object {
        "_id": "b19999999999999999999999",
        "isActive": true,
        "name": "pn1",
        "program": Array [
          Object {
            "camera": "VTEn12w1YXTkgY184rRQMjus2WKlrg5s",
            "directorRemarks": "03GbvfcKYTRNQgYUpIwTe6s0dYc9h0y7kyb9ZKE5cxvWZU9mnyjFtQWxJjxQQq1R",
            "duration": 2,
            "importance": "8",
            "movement": "q85eQrCgnUkkgaMn",
            "movementTowards": "7rkww949",
            "number": 0,
            "operatorRemarks": "Wx5AlJMLT4ohkFMjdnRnwv8R1ozRGQFmBLxEuitPL8wmx9y6JBtHB7fJzOOkF0U4",
            "pname": "RAAOUh6Udwzimhlv9WbMO03pwHhdLKKi",
            "type": "2",
          },
          Object {
            "camera": "2CXuIeoVSwo5uUwfaTMuF8YFwS4VWnnN",
            "directorRemarks": "MGqIpQxcPYSOneTl49O58shIWv7vMrRw3kb3I6Z07tdWepveBXYeWJwoNASoUma8",
            "duration": 5,
            "importance": "m",
            "movement": "GU5doORkEr6rCcAQ",
            "movementTowards": "GUfGDwIc",
            "number": 1,
            "operatorRemarks": "mqsS8mhMLJr7aUO9j6LpBYezr8OU51vqub7pAUBpb3LSuo0Wpq5tb5YZClltUbat",
            "pname": "cv5ORQke7w6T4WTKKwBrA436dhyMSeFE",
            "type": "7",
          },
          Object {
            "camera": "BThBtlqWTUUiZzdsfu1yUz47bxcfWCNW",
            "directorRemarks": "sYtF9gUHH4OeUNEyNdt5yGOpdsSTCFlPoPemglxPbvj5AIJnaNiG9aezUDmOiAde",
            "duration": 8,
            "importance": "j",
            "movement": "GCFRzT8wBg8IcHNb",
            "movementTowards": "5aZIpGgl",
            "number": 2,
            "operatorRemarks": "VbzCkF2eEXiZIXHwZlGQEGKl0LbmXiKBbRqguKyIzhPCntarIY8GK1ZQNVuWkevz",
            "pname": "dHC7zUrapYwtc3G7BgKsfkNW0NVA74kX",
            "type": "V",
          },
        ],
        "shot": 0,
      },
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {
    "2CXuIeoVSwo5uUwfaTMuF8YFwS4VWnnN": -2077750800000,
    "BThBtlqWTUUiZzdsfu1yUz47bxcfWCNW": -2077750800000,
    "VTEn12w1YXTkgY184rRQMjus2WKlrg5s": -2077750800000,
    "b19999999999999999999999": -2077750800000,
  },
  "removeState": Object {},
  "updateState": Object {
    "edit.projectModelb19999999999999999999999": Object {
      "_id": "b19999999999999999999999",
      "isActive": true,
      "name": "pn1",
      "program": Array [
        Object {
          "camera": "VTEn12w1YXTkgY184rRQMjus2WKlrg5s",
          "directorRemarks": "03GbvfcKYTRNQgYUpIwTe6s0dYc9h0y7kyb9ZKE5cxvWZU9mnyjFtQWxJjxQQq1R",
          "duration": 2,
          "importance": "8",
          "movement": "q85eQrCgnUkkgaMn",
          "movementTowards": "7rkww949",
          "number": 0,
          "operatorRemarks": "Wx5AlJMLT4ohkFMjdnRnwv8R1ozRGQFmBLxEuitPL8wmx9y6JBtHB7fJzOOkF0U4",
          "pname": "RAAOUh6Udwzimhlv9WbMO03pwHhdLKKi",
          "type": "2",
        },
        Object {
          "camera": "2CXuIeoVSwo5uUwfaTMuF8YFwS4VWnnN",
          "directorRemarks": "MGqIpQxcPYSOneTl49O58shIWv7vMrRw3kb3I6Z07tdWepveBXYeWJwoNASoUma8",
          "duration": 5,
          "importance": "m",
          "movement": "GU5doORkEr6rCcAQ",
          "movementTowards": "GUfGDwIc",
          "number": 1,
          "operatorRemarks": "mqsS8mhMLJr7aUO9j6LpBYezr8OU51vqub7pAUBpb3LSuo0Wpq5tb5YZClltUbat",
          "pname": "cv5ORQke7w6T4WTKKwBrA436dhyMSeFE",
          "type": "7",
        },
        Object {
          "camera": "BThBtlqWTUUiZzdsfu1yUz47bxcfWCNW",
          "directorRemarks": "sYtF9gUHH4OeUNEyNdt5yGOpdsSTCFlPoPemglxPbvj5AIJnaNiG9aezUDmOiAde",
          "duration": 8,
          "importance": "j",
          "movement": "GCFRzT8wBg8IcHNb",
          "movementTowards": "5aZIpGgl",
          "number": 2,
          "operatorRemarks": "VbzCkF2eEXiZIXHwZlGQEGKl0LbmXiKBbRqguKyIzhPCntarIY8GK1ZQNVuWkevz",
          "pname": "dHC7zUrapYwtc3G7BgKsfkNW0NVA74kX",
          "type": "V",
        },
      ],
      "shot": 0,
    },
    "edit.undefinedb19999999999999999999999": null,
  },
}
`;

exports[` direct a test   can increase number :  project pushed by server  1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": Object {},
  "fetching": Object {},
  "formsToUpdate": Array [],
  "getState": Object {
    "projects": Object {
      "b19999999999999999999999": Object {
        "_id": "b19999999999999999999999",
        "isActive": true,
        "name": "pn1",
        "program": Array [
          Object {
            "camera": "VTEn12w1YXTkgY184rRQMjus2WKlrg5s",
            "directorRemarks": "03GbvfcKYTRNQgYUpIwTe6s0dYc9h0y7kyb9ZKE5cxvWZU9mnyjFtQWxJjxQQq1R",
            "duration": 2,
            "importance": "8",
            "movement": "q85eQrCgnUkkgaMn",
            "movementTowards": "7rkww949",
            "number": 0,
            "operatorRemarks": "Wx5AlJMLT4ohkFMjdnRnwv8R1ozRGQFmBLxEuitPL8wmx9y6JBtHB7fJzOOkF0U4",
            "pname": "RAAOUh6Udwzimhlv9WbMO03pwHhdLKKi",
            "type": "2",
          },
          Object {
            "camera": "2CXuIeoVSwo5uUwfaTMuF8YFwS4VWnnN",
            "directorRemarks": "MGqIpQxcPYSOneTl49O58shIWv7vMrRw3kb3I6Z07tdWepveBXYeWJwoNASoUma8",
            "duration": 5,
            "importance": "m",
            "movement": "GU5doORkEr6rCcAQ",
            "movementTowards": "GUfGDwIc",
            "number": 1,
            "operatorRemarks": "mqsS8mhMLJr7aUO9j6LpBYezr8OU51vqub7pAUBpb3LSuo0Wpq5tb5YZClltUbat",
            "pname": "cv5ORQke7w6T4WTKKwBrA436dhyMSeFE",
            "type": "7",
          },
          Object {
            "camera": "BThBtlqWTUUiZzdsfu1yUz47bxcfWCNW",
            "directorRemarks": "sYtF9gUHH4OeUNEyNdt5yGOpdsSTCFlPoPemglxPbvj5AIJnaNiG9aezUDmOiAde",
            "duration": 8,
            "importance": "j",
            "movement": "GCFRzT8wBg8IcHNb",
            "movementTowards": "5aZIpGgl",
            "number": 2,
            "operatorRemarks": "VbzCkF2eEXiZIXHwZlGQEGKl0LbmXiKBbRqguKyIzhPCntarIY8GK1ZQNVuWkevz",
            "pname": "dHC7zUrapYwtc3G7BgKsfkNW0NVA74kX",
            "type": "V",
          },
        ],
        "shot": 1,
      },
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {
    "b19999999999999999999999": -2077750800000,
  },
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[` direct a test   can increase number : Before manual edits 1`] = `
<div
  className="flex1 column"
>
  <div
    className="flex center marginTopBottom"
  >
    <div
      className="titleBox"
    >
      pn1
    </div>
  </div>
  <div
    className="flex center"
  >
    <div
      className="currentBox shotEditorInfoBox"
    >
      Shot
      <br />
      <span
        className="shotNumber"
      >
        2
      </span>
      <br />
      <span>
        
      </span>
      <br />
      cv5ORQke7w6T4WTKKwBrA436dhyMSeFE
    </div>
  </div>
  <div
    className="flex center marginTopBottom"
  >
    <div
      className="Button"
    >
      {
  "text": "Prev",
  "className": "hugeButton",
  "iconFa": "step-backward",
  "preventTextChange": true
}
    </div>
    <div
      style={
        Object {
          "width": "1.5rem",
        }
      }
    />
    <div
      className="Button"
    >
      {
  "text": "Next",
  "className": "hugeButton",
  "iconFa": "step-forward",
  "fill": true,
  "preventTextChange": true
}
    </div>
  </div>
  <div
    className="flex column center"
  >
    <div
      className="List"
    >
      {}
      <ul>
        <div
          className="ListInput"
        >
          {
  "type": "number",
  "value": 2,
  "label": "Jump to shot",
  "clearButton": true
}
        </div>
      </ul>
    </div>
    <div
      className="Button"
    >
      {
  "style": {
    "marginTop": "-2rem"
  },
  "text": "Jump to shot",
  "iconFa": "fast-forward",
  "preventTextChange": true
}
    </div>
  </div>
  <div
    className="BlockTitle"
  >
    {
  "className": "centerText"
}
    <span
      text="director.cameras"
    >
      Automatically controlled cameras
    </span>
  </div>
  <div
    className="flex row center"
  />
</div>
`;

exports[` direct a test   can increase number : reduced to 0 1`] = `
<div
  className="flex1 column"
>
  <div
    className="flex center marginTopBottom"
  >
    <div
      className="titleBox"
    >
      pn1
    </div>
  </div>
  <div
    className="flex center"
  >
    <div
      className="currentBox shotEditorInfoBox"
    >
      Shot
      <br />
      <span
        className="shotNumber"
      >
        1
      </span>
      <br />
      <span>
        
      </span>
      <br />
      RAAOUh6Udwzimhlv9WbMO03pwHhdLKKi
    </div>
  </div>
  <div
    className="flex center marginTopBottom"
  >
    <div
      className="Button"
    >
      {
  "text": "Prev",
  "className": "hugeButton",
  "iconFa": "step-backward",
  "preventTextChange": true,
  "loading": false,
  "disabled": false
}
    </div>
    <div
      style={
        Object {
          "width": "1.5rem",
        }
      }
    />
    <div
      className="Button"
    >
      {
  "text": "Next",
  "className": "hugeButton",
  "iconFa": "step-forward",
  "fill": true,
  "preventTextChange": true,
  "loading": false,
  "disabled": false
}
    </div>
  </div>
  <div
    className="flex column center"
  >
    <div
      className="List"
    >
      {}
      <ul>
        <div
          className="ListInput"
        >
          {
  "type": "number",
  "value": 2,
  "label": "Jump to shot",
  "clearButton": true
}
        </div>
      </ul>
    </div>
    <div
      className="Button"
    >
      {
  "style": {
    "marginTop": "-2rem"
  },
  "text": "Jump to shot",
  "iconFa": "fast-forward",
  "preventTextChange": true,
  "loading": false,
  "disabled": false
}
    </div>
  </div>
  <div
    className="BlockTitle"
  >
    {
  "className": "centerText"
}
    <span
      text="director.cameras"
    >
      Automatically controlled cameras
    </span>
  </div>
  <div
    className="flex row center"
  />
</div>
`;

exports[` direct a test   can increase number : reduced to 1 1`] = `
<div
  className="flex1 column"
>
  <div
    className="flex center marginTopBottom"
  >
    <div
      className="titleBox"
    >
      pn1
    </div>
  </div>
  <div
    className="flex center"
  >
    <div
      className="currentBox shotEditorInfoBox"
    >
      Shot
      <br />
      <span
        className="shotNumber"
      >
        2
      </span>
      <br />
      <span>
        
      </span>
      <br />
      cv5ORQke7w6T4WTKKwBrA436dhyMSeFE
    </div>
  </div>
  <div
    className="flex center marginTopBottom"
  >
    <div
      className="Button"
    >
      {
  "text": "Prev",
  "className": "hugeButton",
  "iconFa": "step-backward",
  "preventTextChange": true,
  "loading": false,
  "disabled": false
}
    </div>
    <div
      style={
        Object {
          "width": "1.5rem",
        }
      }
    />
    <div
      className="Button"
    >
      {
  "text": "Next",
  "className": "hugeButton",
  "iconFa": "step-forward",
  "fill": true,
  "preventTextChange": true,
  "loading": false,
  "disabled": false
}
    </div>
  </div>
  <div
    className="flex column center"
  >
    <div
      className="List"
    >
      {}
      <ul>
        <div
          className="ListInput"
        >
          {
  "type": "number",
  "value": 2,
  "label": "Jump to shot",
  "clearButton": true
}
        </div>
      </ul>
    </div>
    <div
      className="Button"
    >
      {
  "style": {
    "marginTop": "-2rem"
  },
  "text": "Jump to shot",
  "iconFa": "fast-forward",
  "preventTextChange": true,
  "loading": false,
  "disabled": false
}
    </div>
  </div>
  <div
    className="BlockTitle"
  >
    {
  "className": "centerText"
}
    <span
      text="director.cameras"
    >
      Automatically controlled cameras
    </span>
  </div>
  <div
    className="flex row center"
  />
</div>
`;

exports[` direct a test   can increase number : regardless of many increases the max stays at 2 1`] = `
<div
  className="flex1 column"
>
  <div
    className="flex center marginTopBottom"
  >
    <div
      className="titleBox"
    >
      pn1
    </div>
  </div>
  <div
    className="flex center"
  >
    <div
      className="currentBox shotEditorInfoBox"
    >
      Shot
      <br />
      <span
        className="shotNumber"
      >
        3
      </span>
      <br />
      <span>
        
      </span>
      <br />
      dHC7zUrapYwtc3G7BgKsfkNW0NVA74kX
    </div>
  </div>
  <div
    className="flex center marginTopBottom"
  >
    <div
      className="Button"
    >
      {
  "text": "Prev",
  "className": "hugeButton",
  "iconFa": "step-backward",
  "preventTextChange": true,
  "loading": false,
  "disabled": false
}
    </div>
    <div
      style={
        Object {
          "width": "1.5rem",
        }
      }
    />
    <div
      className="Button"
    >
      {
  "text": "Next",
  "className": "hugeButton",
  "iconFa": "step-forward",
  "fill": true,
  "preventTextChange": true,
  "loading": false,
  "disabled": false
}
    </div>
  </div>
  <div
    className="flex column center"
  >
    <div
      className="List"
    >
      {}
      <ul>
        <div
          className="ListInput"
        >
          {
  "type": "number",
  "value": 2,
  "label": "Jump to shot",
  "clearButton": true
}
        </div>
      </ul>
    </div>
    <div
      className="Button"
    >
      {
  "style": {
    "marginTop": "-2rem"
  },
  "text": "Jump to shot",
  "iconFa": "fast-forward",
  "preventTextChange": true,
  "loading": false,
  "disabled": false
}
    </div>
  </div>
  <div
    className="BlockTitle"
  >
    {
  "className": "centerText"
}
    <span
      text="director.cameras"
    >
      Automatically controlled cameras
    </span>
  </div>
  <div
    className="flex row center"
  />
</div>
`;

exports[` direct a test   can increase number : stays at 0 because thats minimum 1`] = `
<div
  className="flex1 column"
>
  <div
    className="flex center marginTopBottom"
  >
    <div
      className="titleBox"
    >
      pn1
    </div>
  </div>
  <div
    className="flex center"
  >
    <div
      className="currentBox shotEditorInfoBox"
    >
      Shot
      <br />
      <span
        className="shotNumber"
      >
        1
      </span>
      <br />
      <span>
        
      </span>
      <br />
      RAAOUh6Udwzimhlv9WbMO03pwHhdLKKi
    </div>
  </div>
  <div
    className="flex center marginTopBottom"
  >
    <div
      className="Button"
    >
      {
  "text": "Prev",
  "className": "hugeButton",
  "iconFa": "step-backward",
  "preventTextChange": true,
  "loading": false,
  "disabled": false
}
    </div>
    <div
      style={
        Object {
          "width": "1.5rem",
        }
      }
    />
    <div
      className="Button"
    >
      {
  "text": "Next",
  "className": "hugeButton",
  "iconFa": "step-forward",
  "fill": true,
  "preventTextChange": true,
  "loading": false,
  "disabled": false
}
    </div>
  </div>
  <div
    className="flex column center"
  >
    <div
      className="List"
    >
      {}
      <ul>
        <div
          className="ListInput"
        >
          {
  "type": "number",
  "value": 2,
  "label": "Jump to shot",
  "clearButton": true
}
        </div>
      </ul>
    </div>
    <div
      className="Button"
    >
      {
  "style": {
    "marginTop": "-2rem"
  },
  "text": "Jump to shot",
  "iconFa": "fast-forward",
  "preventTextChange": true,
  "loading": false,
  "disabled": false
}
    </div>
  </div>
  <div
    className="BlockTitle"
  >
    {
  "className": "centerText"
}
    <span
      text="director.cameras"
    >
      Automatically controlled cameras
    </span>
  </div>
  <div
    className="flex row center"
  />
</div>
`;
